# mklicense

./: README.md  pyproject.toml
mklicense/: app.py  factory.py  license.py
mklicense/licenses/: AGPL3.txt  GPL3.txt
tapes/: README.md  tape1.tape
